syntax="proto3";

message Calculator{
	int32 number1=1;
	int32 number2=2;

}

message CalclatorRequest{
	Calculator calculator=1; 
}
message CalclatorResponse{
	string result=1;
}

service CalclatorServive{
	rpc Sum(CalclatorRequest) returns(CalclatorResponse){};
}